# cpptrail

./: CMakeLists.txt  Doxyfile  README.md
.github/workflows/: static.yml
cmake/: doxygen.cmake
doc/: custom_logger.dox  mainpage.dox
include/cpptrail/: async_logger.h  base_logger.h  def.h  logger.h  logger_impl.h  message.h  ostream_logger.h  rfc3339.h  sync_logger.h  utf42.h
src/cpptrail/: main.cpp  test.h
